@@ -1,6 +1,6 @@
 
 # set default logging level and appender
-log4j.rootCategory=INFO, console
+log4j.rootCategory=WARN, console
 #log4j.category.net.sourceforge.cobertura=WARN, console
 
 #log4j.category.net.sourceforge.cobertura.check=DEBUG, console
