@@ -16,7 +16,7 @@
   <extension point="org.eclipse.ant.core.antTasks">
     <antTask name="instrument" class="net.sourceforge.cobertura.ant.InstrumentTask" library="cobertura.jar"/>
     <antTask name="merge" class="net.sourceforge.cobertura.ant.MergeTask" library="cobertura.jar"/>
-    <antTask name="report" class="net.sourceforge.cobertura.ant.CoverageReportTask" library="cobertura.jar"/>
+    <antTask name="report" class="net.sourceforge.cobertura.ant.ReportTask" library="cobertura.jar"/>
     <antTask name="check" class="net.sourceforge.cobertura.ant.CheckTask" library="cobertura.jar"/>
   </extension>
 </plugin>
